[package]
name = "Stack-Based-CPU"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# https://stackoverflow.com/questions/31215139/how-can-integer-overflow-protection-be-turned-off
[profile.dev]
overflow-checks = false
